fix: align items in header cart

--- a/src/assets/styles/base/_cart.scss
+++ b/src/assets/styles/base/_cart.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex: 1;
   justify-content: space-evenly;
+  align-items: center;
   @include media-hover {
     &:hover {
       filter: brightness(10);
